# 111

./: .gitignore  CMakeLists.txt  MP3_PLAYER_USAGE.md  mp3  partitions.csv  sdkconfig
components/audio_codec/: CMakeLists.txt  audio_codec.c
components/audio_codec/include/: audio_codec.h
components/co5300_panel/: co5300_panel.c  co5300_panel_defaults.h
components/co5300_panel/include/: co5300_panel.h
components/get_time/: get_time.c  get_time.h
components/i2c_manager/: CMakeLists.txt  README.md  i2c_manager.c
components/i2c_manager/include/: i2c_manager.h
components/lvgl_port/: CMakeLists.txt  lv_port.c  lv_port.h  lv_port_config.h
components/mp3_player/: CMakeLists.txt
components/mp3_player/include/: mp3_player.h
components/sd_card/: sd_manager.c
components/touch_ft5x06/: CMakeLists.txt  touch_ft5x06.c
components/touch_ft5x06/include/: touch_ft5x06.h
components/z_print_esp32/: printf_esp32.c
main/: 111.c  CMakeLists.txt  audio_app.c  audio_app.h  hardware_init.c  hardware_init.h  hptts.h  idf_component.yml  lvgl_task.c  mp3_player.c  mp3_test_examples.c  simple_wifi_sta.c  time_weather.c
main/ui/custom/: clock_functions.c
